--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "markdown>=3.10",
+    "moviepy>=2.2.1",
     "ollama>=0.6.1",
     "openai-whisper>=20250625",
     "pydub>=0.25.1",
