fix: use singular extra-index-url in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,6 @@ dependencies = [
 [tool.uv]
 package = true
 index-url = "https://pypi.org/simple"
-extra-index-urls = ["https://download.pytorch.org/whl/cu124"]
+extra-index-url = ["https://download.pytorch.org/whl/cu124"]
 [project.scripts]
 summarize-video = "summarize_video.cli:main"
