--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10,<3.12"
 dependencies = [
-    "torch>=2.0,<2.3",
+    "torch>=2.10.0.dev0",
     "torchvision",
     "torchaudio",
     "moviepy",
@@ -16,9 +16,12 @@ dependencies = [
     "numpy<2",
     "pytubefix>=10.3.5",
 ]
+
 [tool.uv]
 package = true
+index-strategy = "unsafe-best-match"
 index-url = "https://pypi.org/simple"
-extra-index-url = ["https://download.pytorch.org/whl/cu124"]
+extra-index-url = ["https://download.pytorch.org/whl/nightly/cu126"]
+
 [project.scripts]
 summarize-video = "summarize_video.cli:main"
