--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "ollama>=0.6.1",
     "numpy<2",
     "pytubefix>=10.3.5",
+    "markdown",
+    "xhtml2pdf",
 ]
 
 [tool.uv]
