--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "pytubefix>=10.3.5",
     "markdown",
     "xhtml2pdf",
+    "streamlit>=1.52.0",
 ]
 
 [tool.uv]
@@ -24,6 +25,8 @@ package = true
 index-strategy = "unsafe-best-match"
 index-url = "https://pypi.org/simple"
 extra-index-url = ["https://download.pytorch.org/whl/nightly/cu126"]
+required-environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
+prerelease = "allow"
 
 [project.scripts]
 summarize-video = "summarize_video.cli:main"
