--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,3 +4,6 @@ backgroundColor = "#0E1117"
 secondaryBackgroundColor = "#262730"
 textColor = "#FAFAFA"
 font = "sans serif"
+
+[server]
+address = "0.0.0.0"
